--- a/TODO.org
+++ b/TODO.org
@@ -20,7 +20,7 @@
 ** DONE Register with the 'load' event inside ~runGame~
 ** DONE Serve the actual game-sandbox.js (rather than having to copy it manually)
 ** DONE Support for secure web sockets
-** TODO Rewrite the README in markdown because NPMJS.com doesn't like org mode
+** DONE Rewrite the README in markdown because NPMJS.com doesn't like org mode
 ** TODO Detect changes to initial state and do a full reload
 ** TODO Implement an in-game menu for built-in functions (FPS, state mgmt...)
 ** TODO Record / loop state / go back
