--- a/TODO.org
+++ b/TODO.org
@@ -35,13 +35,16 @@
    - Ejecting
 ** DONE Recalculate canvas BB every time HUD is toggled on
    - Currently, resizing the screen after starting the engine causes the HUD to be misplaced
-** TODO Record / loop state / go back
-** TODO Detect changes to initial state and do a full reload
+** DONE Record / loop state / go back
+** TODO Replay in slow motion
+** TODO Play frame by frame
+** TODO Introspect state (while playing frame-by-frame)
 ** TODO Implement the ~init~ cli function
 ** TODO Handle esbuild errors gracefully (e.g. notify client?)
 ** TODO When there's an error, the client should not keep going. Also, how to recover?
 ** TODO Game tools (blit image, etc)
 ** FIXME Can we be loading stale ~out.js~ from a previously existing dist??
+** TODO Detect changes to initial state and do a full reload
 ** TODO The ~runGame~ moduleUrl parameter is confusing
 ** FIXME Detect clashes with made up ~build~ url if the base dir has a ~build~ subdirectory
 ** FIXME Reposition HUD when window changes size
