--- a/TODO.org
+++ b/TODO.org
@@ -36,10 +36,12 @@
 ** DONE Recalculate canvas BB every time HUD is toggled on
    - Currently, resizing the screen after starting the engine causes the HUD to be misplaced
 ** DONE Record / loop state / go back
+** TODO Manage the canvas parent, so we can have proper HUDs
 ** TODO Replay in slow motion
 ** TODO Play frame by frame
 ** TODO Introspect state (while playing frame-by-frame)
 ** TODO Implement the ~init~ cli function
+** TODO Abstract UI widgets so we don't have to write HTML
 ** TODO Handle esbuild errors gracefully (e.g. notify client?)
 ** TODO When there's an error, the client should not keep going. Also, how to recover?
 ** TODO Game tools (blit image, etc)
